--- a/django_admin/blog/templates/blog/about.html
+++ b/django_admin/blog/templates/blog/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% if title %}
+        <title>first {{title}}</title> 
+    {%else%}
+        <title>Scond title</title>
+    {% endif %}
 </head>
 <body>
     <h1>Blog about</h1>
