--- a/django_admin/blog/templates/blog/home.html
+++ b/django_admin/blog/templates/blog/home.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    {% if title %}
+        <title>first {{title}}</title> 
+    {%else%}
+        <title>Scond title</title>
+    {% endif %}
+    
 </head>
 <body>
-    <h1>Blog home</h1>
+    <!--This is a comment. Comments are not displayed in the browser-->
+    {% for post in posts %}
+        <h1>{{post.title}}</h1>
+        <p>By {{ post.author }} on {{ post.date_posted}}</p>
+        <p>{{post.content}}</p>
+    {% endfor %}  
 </body>
 </html>
