--- a/django_admin/blog/templates/blog/about.html
+++ b/django_admin/blog/templates/blog/about.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title %}
-        <title>first {{title}}</title> 
-    {%else%}
-        <title>Scond title</title>
-    {% endif %}
-</head>
-<body>
-    <h1>Blog about</h1>
-</body>
-</html>
+{% extends "blog/base.html"%}
+{% block content %}
+    <h1>Blog about</h1>  
+{% endblock content %}
+
+
+
